@@ -1,5 +1,6 @@
+// { dg-options "-std=gnu++17" }
 // { dg-do compile { target c++17 } }
-//
+
 // Copyright (C) 2019 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
@@ -17,7 +18,8 @@
 // with this library; see the file COPYING3.  If not see
 // <http://www.gnu.org/licenses/>.
 
-// { dg-error "must be a complete class" "" { target *-*-* } 0 }
+// Expect the compiler builtin to do the completeness check.
+// { dg-error "incomplete type" "" { target *-*-* } 0 }
 
 #include <type_traits>
 
