@@ -1,5 +1,16 @@
 2019-06-06  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/std/type_traits (is_empty, is_polymorphic, is_final)
+	(is_abstract, is_aggregate): Remove static_assert.
+	* testsuite/20_util/is_abstract/incomplete_neg.cc: Check for error
+	from builtin only.
+	* testsuite/20_util/is_aggregate/incomplete_neg.cc: Likewise. Add
+	missing -std=gnu++17 option.
+	* testsuite/20_util/is_empty/incomplete_neg.cc: New test.
+	* testsuite/20_util/is_final/incomplete_neg.cc: New test.
+	* testsuite/20_util/is_polymorphic/incomplete_neg.cc: Check for error
+	from builtin only.
+
 	* testsuite/18_support/set_terminate.cc: Do not run for C++98 mode.
 	* testsuite/18_support/set_unexpected.cc: Likewise.
 	* testsuite/20_util/is_nothrow_invocable/value.cc: Test converting to
